# pidfd_getfd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: lib.rs  linux.rs
