[package]
name = "pidfd_getfd"
description = "Binding to and a wrapper for the pidfd_getfd syscall"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2018"
documentation = "https://docs.rs/pidfd_getfd"
repository = "https://github.com/PatchMixolydic/pidfd_getfd"
keywords = ["pidfd", "linux", "syscall", "passing", "descriptors"]
categories = ["api-bindings", "external-ffi-bindings", "os::linux-apis"]

# gated to Linux to allow the crate to reach a `compile_error!`
# on other platforms
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.98"
pidfd = "0.2.4"
